[workspace]
members = [
    "crates/docan",
    "crates/doip",
    "crates/iso13400-2",
    "crates/iso14229-1",
    "crates/iso15765-2",
]

resolver = "2"

[workspace.dependencies]
#async-trait = "0.1"
#syn = { version = "2.0", features = ["full", ] }
#quote = "1.0"
#proc-macro2 = "1.0"
log = "0.4"
thiserror = "2"
lazy_static = "1"
#byteorder = "1"
half = "2"
bitflags = "2"
bitfield-struct = "0.9"
derive-getters = "0"
hex = "0.4"
tokio = { version = "1" }
iso13400-2 = { path = "crates/iso13400-2" }
iso14229-1 = { path = "crates/iso14229-1" }
iso15765-2 = { path = "crates/iso15765-2" }

# dev dependencies
anyhow = "1"
