[workspace]
members = [
#    "crates/drivers/nican",
    "crates/drivers/rs-can",
    "crates/drivers/socan",
    "crates/drivers/zlgcan",

    "crates/protocols/docan",
    "crates/protocols/doip",
    "crates/protocols/iso13400-2",
    "crates/protocols/iso14229-1",
    "crates/protocols/iso15765-2",
    "crates/protocols/xcp",
]

resolver = "2"

[workspace.dependencies]
thiserror = "2"
log = "0"
hex = "0.4"
dlopen2 = "0.7"
bitflags = "2.6"
bitfield-struct = "0.10"
getset = "0.1"
lazy_static = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }

rs-can = { path = "crates/drivers/rs-can" }
docan = { path = "crates/protocols/docan" }
iso13400-2 = { path = "crates/protocols/iso13400-2" }
iso14229-1 = { path = "crates/protocols/iso14229-1" }
iso15765-2 = { path = "crates/protocols/iso15765-2" }

# dev-dependencies
anyhow = "1"
bin_file = "0.1"
crc = "3.2"
