[workspace]
members = [
    "iso13400-2",
    "iso14229-1",
    "iso15765-2",
]

resolver = "2"

[workspace.package]
version = "0.1.0-alpha3"
edition = "2021"
license = "MIT OR GPL-3.0"
authors = ["Jesse Smith <zhuyu4839@gmail.com>"]

[workspace.dependencies]
bitflags = "2.6"
bitfield-struct = "0.10"
getset = "0.1"
hex = "0.4"
lazy_static = "1"
log = "0"
thiserror = "2"

# dev-dependencies
anyhow = "1"

[workspace.dependencies.rs-can]
git = "https://github.com/zhuyu4839/rust-can.git"
branch = "develop"
package = "rs-can"