[package]
name = "ecu-uds"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }
half = { workspace = true }
bitflags = { workspace = true }
bitfield-struct = { workspace = true }
isotp-rs = { workspace = true }
hex-literal = { workspace = true }

[dependencies.tokio]
version = "1"
features = ["time", ]
optional = true

[dev-dependencies]
anyhow = { workspace = true }
bin_file = "0.1"
crc = "3.2"

zlgcan_common = { path = "../../zlgcan-driver-rs/zlgcan-common" }
zlgcan_driver = { path = "../../zlgcan-driver-rs/zlgcan-driver" }

[features]
default = ["std2020"]

std2006 = []
std2013 = []
std2020 = []
