[package]
name = "ecu-uds"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"
authors = ["zhuyu <zhuyu4839@gmail.com>"]
description = "A ECU-UDS protocol."
homepage = "https://github.com/zhuyu4839/ecu-proto-rs"
repository = "https://github.com/zhuyu4839/ecu-proto-rs"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }
half = { workspace = true }
bitflags = { workspace = true }
bitfield-struct = { workspace = true }
isotp-rs = { workspace = true }
hex-literal = { workspace = true }

[dependencies.tokio]
version = "1"
features = ["time", ]
optional = true

[dev-dependencies]
anyhow = { workspace = true }

[features]
default = ["std2020"]

std2006 = []
std2013 = []
std2020 = []
