[package]
name = "ecu-uds"
version = "0.1.6"
edition = "2021"
license = "GPL-3.0"
authors = ["zhuyu <zhuyu4839@gmail.com>"]
description = "A ECU-UDS protocol."
homepage = "https://github.com/zhuyu4839/ecu-proto-rs"
repository = "https://github.com/zhuyu4839/ecu-proto-rs"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }
half = { workspace = true }
bitflags = { workspace = true }
bitfield-struct = { workspace = true }
isotp-rs = { workspace = true }
hex = { workspace = true }
iso14229-1 = { workspace = true, default-features = false }

[dependencies.tokio]
version = "1"
features = ["time", ]
optional = true

[dev-dependencies]
anyhow = { workspace = true }

[features]
default = ["ISO14229-1-2020"]

ISO14229-1-2006 = ["iso14229-1/std2006"]
ISO14229-1-2013 = ["iso14229-1/std2013"]
ISO14229-1-2020 = ["iso14229-1/std2020"]
