[package]
name = "iso14229-1"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "A ISO 14229-1 protocol."
homepage = "https://github.com/zhuyu4839/ecu-proto-rs/tree/develop/is14229-1"
repository.workspace = true
keywords = [
    "automotive",
    "UDS",
    "ISO14229",
    "DoCAN"
]

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }
bitflags = { workspace = true }
bitfield-struct = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }

[features]
default = ["std2020"]

#std2004 = []
std2006 = []
std2013 = []
std2020 = []
session_data_check = []
