[package]
name = "iso14229-1"
version = "0.1.0-alpha0"
edition = "2021"
license = "GPL-3.0"
authors = ["zhuyu <zhuyu4839@gmail.com>"]
description = "A ISO 14229-1 protocol."
homepage = "https://github.com/zhuyu4839/ecu-proto-rs"
repository = "https://github.com/zhuyu4839/ecu-proto-rs"
keywords = [
    "automotive",
    "UDS",
    "ISO14229",
    "DoCAN"
]

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }
#byteorder = { workspace = true }
bitflags = { workspace = true }
bitfield-struct = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }

[features]
default = ["std2020"]

std2006 = []
std2013 = []
std2020 = []
session_data_check = []
