[package]
name = "iso15765-2"
version = "0.1.0-alpha0"
edition = "2021"
authors = ["zhuyu <zhuyu4839@gmail.com>"]
license = "GPL-3.0"
description = "ISO-TP(ISO 15765-2) trait define."
homepage = "https://github.com/zhuyu4839/ecu-proto-rs"
repository = "https://github.com/zhuyu4839/ecu-proto-rs"

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
bitflags = { workspace = true }

[dependencies.tokio]
workspace = true
features = ["rt-multi-thread", "time"]
optional = true

[dev-dependencies]
anyhow = { workspace = true }

[features]
default = ["std2004"]

async = []

std2004 = []
std2016 = []
can-fd = []
