[package]
name = "rs-can"
version = "0.1.0-alpha3"
edition = "2021"
authors = ["zhuyu <zhuyu4839@gmail.com>"]
description = "A Nican driver."
homepage = "https://github.com/zhuyu4839/ecu-proto-rs"
repository = "https://github.com/zhuyu4839/ecu-proto-rs"

[licenses]
allow = [
    "GPL-3.0",
    "MIT",
]

[dependencies]
log = { workspace = true }
bitflags = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

[dependencies.iso15765-2]
workspace = true
optional = true

[dev-dependencies]
anyhow = { workspace = true }

[features]
#default = ["isotp-std2004"]

async = []
isotp-can-fd = []
isotp-std2004 = ["iso15765-2"]
isotp-std2016 = ["iso15765-2"]
