[package]
name = "zlgcan"
version = "0.1.0-beta0"
edition = "2021"
authors = ["zhuyu <zhuyu4839@gmail.com>"]
description = "A Cross-platform ZLGCAN driver."
homepage = "https://github.com/zhuyu4839/ecu-proto-rs"
repository = "https://github.com/zhuyu4839/ecu-proto-rs"

[licenses]
allow = [
    "GPL-3.0",
    "MIT",
]

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
dotenvy = { workspace = true }
dlopen2 = { workspace = true }
iso14229-1 = { workspace = true }
iso15765-2 = { workspace = true }
rs-can = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
bin_file = { workspace = true }
crc = { workspace = true }
docan = { workspace = true }
