[package]
name = "docan"
version = "0.1.0-alpha0"
edition = "2021"
license = "GPL-3.0"
authors = ["zhuyu <zhuyu4839@gmail.com>"]
description = "A DoCAN protocol."
homepage = "https://github.com/zhuyu4839/ecu-proto-rs"
repository = "https://github.com/zhuyu4839/ecu-proto-rs"
keywords = [
    "automotive",
    "UDS",
    "DoCAN"
]

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
iso15765-2 = { workspace = true }
rs-can = { workspace = true }

[dependencies.iso14229-1]
workspace = true
default-features = false
optional = true

[dependencies.tokio]
workspace = true
features = ["time", ]
optional = true

[features]
async = ["tokio"]

default = ["std2020", "client"]

client = ["rs-can/isotp-std2004"]
server = ["rs-can/isotp-std2004"]

std2006 = ["iso14229-1/std2006"]
std2013 = ["iso14229-1/std2013"]
std2020 = ["iso14229-1/std2020"]
