[package]
name = "doip"
version = "0.0.0"
edition = "2021"
authors = ["zhuyu <zhuyu4839@gmail.com>"]
description = "A DoIP protocol."
homepage = "https://github.com/zhuyu4839/ecu-proto-rs"
repository = "https://github.com/zhuyu4839/ecu-proto-rs"
keywords = [
    "automotive",
    "UDS",
    "DoIP"
]

[licenses]
allow = [
    "GPL-3.0",
    "MIT",
]

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
