[package]
name = "doip"
version = "0.0.0"
edition = "2021"
license = "MIT OR GPL-3.0"
authors = ["zhuyu <zhuyu4839@gmail.com>"]
description = "A DoIP protocol."
homepage = "https://github.com/zhuyu4839/ecu-proto-rs"
repository = "https://github.com/zhuyu4839/ecu-proto-rs"
keywords = [
    "automotive",
    "UDS",
    "DoIP"
]

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
