[package]
name = "doip"
version = "0.0.0"
edition = "2021"
license = "MIT OR GPL-3.0"
authors = ["zhuyu <zhuyu4839@gmail.com>"]
description = "A DoIP protocol."
homepage = "https://github.com/zhuyu4839/ecu-proto-rs"
repository = "https://github.com/zhuyu4839/ecu-proto-rs"
keywords = [
    "automotive",
    "UDS",
    "DoIP"
]

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
getset = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
iso13400-2 = { workspace = true }
iso14229-1 = { workspace = true }

[dependencies.tokio]
workspace = true
optional = true
features = ["net", "time"]

#[dependencies.native-tls]
#workspace = true
#optional = true

#[dependencies.tokio-native-tls]
#workspace = true
#optional = true

[dev-dependencies]
anyhow = { workspace = true }

[features]
async = []

client = []
server = []
