[package]
name = "xcp-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
bitfield-struct = { workspace = true }
#endian-num = { workspace = true, features = ["linux-types", ] }
getset = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
